Added controls to following pages:
Frontpage:
Lbl_User_Count
// Total count of registrered users

Users:
List_Users
// A complete list of users

tb_Name
tb_Email
tb_Password
btn_Save
//Edit fields for user information

lbl_Link
//display a users linked user

list_User_Names
//display a users list of names

list_User_Matches
//display a users list of matches

Advanced Statistics:
//Two placeholder labels - to be replaced!

--- a/Views/AdvStatsView.xaml
+++ b/Views/AdvStatsView.xaml
@@ -7,12 +7,15 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1280">
     <Canvas Background="#FF333333">
-        <Button Content="Overview" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}"/>
-        <Button Content="Users" Canvas.Top="69" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" Foreground="White" Command="{Binding UsersCommand}"/>
+        <Button Content="Overview" Canvas.Top="96" HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}" FontSize="16" Canvas.Left="10" />
+        <Button Content="Users" Canvas.Top="166" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Foreground="White" Command="{Binding UsersCommand}" FontSize="16" Canvas.Left="10"/>
+        <Button Content="Advanced &#xD;&#xA;Statistics" Canvas.Top="238" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding AdvStatsCommand}" FontSize="16" Canvas.Left="10" />
         <Label Content="AdminClient" Height="24" Canvas.Left="592" Width="96" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" Canvas.Top="-1"/>
         <Separator Height="1" Canvas.Top="26" Width="1280" Foreground="#FF585858" Background="#FF383838" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Content="Advanced &#xD;&#xA;Statistics" Canvas.Top="95" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="32" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding AdvStatsCommand}"/>
-        <Label Content="C" Canvas.Left="159" Canvas.Top="39" Background="White"/>
+
+        <Label Content="C" Canvas.Left="10" Canvas.Top="10" Background="White"/>
+        <Label Content="Placeholder GRAPH FRAME" Canvas.Left="292" Canvas.Top="96" Height="400" Width="700" Foreground="White" BorderThickness="2" BorderBrush="White" FontFamily="Bahnschrift" FontSize="48"/>
+        <Label Content="Placeholder Statistics" Canvas.Left="292" Canvas.Top="501" Height="118" Width="700" Foreground="White" BorderThickness="2" BorderBrush="White" FontFamily="Bahnschrift" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
 
     </Canvas>
