--- a/Views/UsersView.xaml
+++ b/Views/UsersView.xaml
@@ -7,12 +7,26 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1280">
     <Canvas Background="#FF333333">
-        <Button Content="Overview" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}"/>
-        <Button Content="Users" Canvas.Top="69" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" Foreground="White" Command="{Binding UsersCommand}"/>
+        <Button Content="Overview" Canvas.Top="96" HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}" FontSize="16" Canvas.Left="10" />
+        <Button Content="Users" Canvas.Top="166" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold" Foreground="White" Command="{Binding UsersCommand}" FontSize="16" Canvas.Left="10"/>
+        <Button Content="Advanced &#xD;&#xA;Statistics" Canvas.Top="238" Width="110" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" Height="50" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding AdvStatsCommand}" FontSize="16" Canvas.Left="10" />
         <Label Content="AdminClient" Height="24" Canvas.Left="592" Width="96" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" Canvas.Top="-1"/>
         <Separator Height="1" Canvas.Top="26" Width="1280" Foreground="#FF585858" Background="#FF383838" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Content="Advanced &#xD;&#xA;Statistics" Canvas.Top="95" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="32" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" Command="{Binding AdvStatsCommand}"/>
-        <Label Content="B" Canvas.Left="150" Canvas.Top="46" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+        <Label Content="B" Canvas.Left="10" Canvas.Top="10" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <ListBox x:Name="List_Users" Height="600" Width="275" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="150" Canvas.Top="96" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="White"/>
+        <Label Content="List of users" Canvas.Left="238" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16"/>
+        <TextBox x:Name="tb_Name" Canvas.Left="500" TextWrapping="Wrap" Text="Name" Canvas.Top="96" Width="250" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Background="#FF333333" BorderBrush="White" Foreground="White" FontSize="14" FontStyle="Italic" FontWeight="Bold"/>
+        <Label Content="Edit User" Canvas.Left="500" Canvas.Top="67" Width="100" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox x:Name="tb_Email" Canvas.Left="500" TextWrapping="Wrap" Text="Email" Canvas.Top="133" Width="250" Height="32" Background="#FF333333" BorderBrush="White" Foreground="White" FontSize="14" FontStyle="Italic" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBox x:Name="tb_Password" Canvas.Left="500" TextWrapping="Wrap" Text="Password" Canvas.Top="170" Width="250" Height="32" Background="#FF333333" BorderBrush="White" Foreground="White" FontSize="14" FontStyle="Italic" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="Linked user:" Canvas.Left="568" Canvas.Top="269" Width="100" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label x:Name="lbl_Link" Content="___________________________" Canvas.Left="670" Canvas.Top="269" Width="110" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Button x:Name="btn_Save" Content="Save Changes" Canvas.Left="574" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="102" Foreground="White" BorderBrush="White" Background="{x:Null}"/>
+        <ListBox x:Name="List_User_Names" Height="600" Width="276" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="910" Canvas.Top="96" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Content="User list of names" Canvas.Left="978" Canvas.Top="67" Width="140" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <ListBox x:Name="List_User_Matches" Height="324" Width="336" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="500" Canvas.Top="372" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Label Content="User list of matches" Canvas.Left="590" Canvas.Top="343" Width="160" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
 
     </Canvas>
