--- a/Views/AdvStatsView.xaml
+++ b/Views/AdvStatsView.xaml
@@ -8,12 +8,23 @@
              mc:Ignorable="d"
              
     d:DesignHeight="800" d:DesignWidth="1280">
-    <Canvas Background="#FF797979">
+    <Canvas Background="#FF333333">
+        <Canvas Visibility="{Binding VisibilityColumn}" Width="219" Height="468" Canvas.Left="267" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Button Height="37" Width="59" Canvas.Left="137" Canvas.Top="63" Command="{Binding AddSeries}" Content="AddSeries" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
+            <TextBox Text="{Binding SeriesNameTextBox}" FontSize="24" IsReadOnly="False" Width="127" Canvas.Top="63" Height="37" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="5" Background="#FF333333" BorderBrush="White" Foreground="White" FontStyle="Italic" FontWeight="Bold"/>
+
+            <Grid Canvas.Left="0" Canvas.Top="144" Height="134" Width="196">
+                <ItemsControl ItemsSource="{Binding SeriesButtons}" Margin="0,-9,10,10" />
+            </Grid>
+        </Canvas>
         <Canvas Visibility="{Binding VisibiltySelected}" Width="500" Height="500" Canvas.Left="5" Canvas.Top="100">
 
-            <Label Content="Selected Names" Canvas.Left="263" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Label Content="Selected Names" Canvas.Left="263" Canvas.Top="5" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Bahnschrift" 
+FontWeight="Bold" 
+FontSize="16"
+Foreground="White"/>
 
-            <ListView SelectedItem="{Binding UnSelectName}" ItemsSource="{Binding SelectedNames}" Width="177" Height="135" Canvas.Left="263" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <ListView SelectedItem="{Binding UnSelectName}" ItemsSource="{Binding SelectedNames}" Width="177" Height="135" Canvas.Left="263" Canvas.Top="39" HorizontalAlignment="Center" VerticalAlignment="Top" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding name}"/>
@@ -24,30 +35,21 @@
             </ListView>
 
         </Canvas>
-        <Canvas Visibility="{Binding VisibilityColumn}" Width="219" Height="468" Canvas.Left="267" Canvas.Top="10" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Button Height="37" Width="59" Canvas.Left="137" Canvas.Top="63" Command="{Binding AddSeries}" Content="AddSeries" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox Text="{Binding SeriesNameTextBox}" FontSize="24" IsReadOnly="False" Width="127" Canvas.Top="63" Height="37" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="5"/>
-
-            <Grid Canvas.Left="0" Canvas.Top="144" Height="134" Width="196">
-                <ItemsControl ItemsSource="{Binding SeriesButtons}" Margin="0,-9,10,10" />
-            </Grid>
-        </Canvas>
-        <Button Content="Overview" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" FontWeight="Bold" Foreground="#FF000880" Command="{Binding OverviewCommand}"/>
-        <Button Content="Users" Canvas.Top="69" Width="71" FontFamily="Bahnschrift" BorderBrush="{x:Null}" Background="{x:Null}" Height="21" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" Foreground="#FF000880" Command="{Binding UsersCommand}"/>
-        <Label Content="AdminClient" Height="24" Canvas.Left="592" Width="96" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FF000273" Canvas.Top="-1"/>
+        <Button Content="Overview" Canvas.Top="44" HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" Height="50" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}" Canvas.Left="5"/>
+        <Button Content="Users" Canvas.Top="109" Width="110" Height="50"  FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White" Command="{Binding UsersCommand}" Canvas.Left="5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="AdminClient" Height="24" Canvas.Left="592" Width="96" FontSize="16"  FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
         <Separator Height="1" Canvas.Top="26" Width="1280" Foreground="#FF585858" Background="#FF383838" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-        <Label Content="C" Canvas.Left="10" Canvas.Top="10" Background="White"/>
 
-        <lvc:PieChart Visibility="{Binding VisibilityPie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Series ="{Binding SeriesCollect}"  LegendLocation="Left" Hoverable="False" DataTooltip="{x:Null}" Canvas.Left="737" Canvas.Top="102" Width="400" Height="400" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Button Height="100" Width=" 100" Canvas.Left="10" Canvas.Top="137" Command="{Binding PopularityCommand}" Content="PopChange"/>
-        <Button Height="100" Width=" 100" Canvas.Left="10" Canvas.Top="252" Command="{Binding OccerrenceCommand}" Content="OccChange" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Height="100" Width=" 100" Canvas.Left="10" Canvas.Top="364" Command="{Binding togglePieChartCommand}" Content="ChartToggle" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-
+        <lvc:PieChart Visibility="{Binding VisibilityPie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Series ="{Binding SeriesCollect}"  LegendLocation="Left" Hoverable="False" DataTooltip="{x:Null}" Canvas.Left="592" Canvas.Top="102" Width="545" Height="601" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Button Height="37" Width="137" Canvas.Left="276" Canvas.Top="295" Command="{Binding PopularityCommand}" Content="Compare On Popularity" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
+        <Button Height="38" Width="137" Canvas.Left="276" Canvas.Top="337" Command="{Binding OccerrenceCommand}" Content="Compare On Occerrence" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
+        <Button Height="54" Width="137" Canvas.Left="276" Canvas.Top="380" Command="{Binding togglePieChartCommand}" Content="Toggle Type" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
 
 
 
-        <ListView ItemsSource="{Binding SelectedNames}" Width="700" Height="218" Canvas.Left="510" Canvas.Top="507" HorizontalAlignment="Center" VerticalAlignment="Top" >
+
+        <ListView ItemsSource="{Binding SelectedNames}" Width="484" Height="218" Canvas.Left="26" Canvas.Top="507" HorizontalAlignment="Left" VerticalAlignment="Center" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White"  >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -64,8 +66,8 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <lvc:CartesianChart Series="{Binding ColumnSeriesProp}" Visibility="{Binding VisibilityColumn}" Padding="5" LegendLocation="Left" Height="390" Width="700" Canvas.Left="510" Canvas.Top="112"/>
-        <ListView SelectedItem="{Binding SelectedName}" ItemsSource="{Binding Names}" Width="145" Height="338" Canvas.Left="115" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <lvc:CartesianChart Series="{Binding ColumnSeriesProp}" Visibility="{Binding VisibilityColumn}" Padding="5" LegendLocation="Left" Height="613" Width="734" Canvas.Left="510" Canvas.Top="112"/>
+        <ListView SelectedItem="{Binding SelectedName}" ItemsSource="{Binding Names}" Width="145" Height="338" Canvas.Left="115" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -86,7 +88,10 @@
 
 
         </ListView>
-        <Label Content="Supported Names" Canvas.Left="115" Canvas.Top="110"/>
+        <Label Content="Supported Names" Canvas.Left="115" Canvas.Top="105" Height="25" Width="140" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" Foreground="White"  HorizontalAlignment="Center" VerticalAlignment="Top"
+
+/>
+        <Button Content="Matches" Canvas.Top="175" Width="110" Height="50"  FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White" Command="{Binding MatchesCommand}" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="5" />
     </Canvas>
 
 
