--- a/Views/MatchStatsView.xaml
+++ b/Views/MatchStatsView.xaml
@@ -1,27 +1,71 @@
-﻿<Window x:Class="AdminClient.Views.MatchStats"
+﻿<UserControl x:Class="AdminClient.Views.MatchStatsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminClient.Views"
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        mc:Ignorable="d"
-        Title="MatchStats" Height="450" Width="800">
-    <Canvas Background="#FF333333">
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+                 mc:Ignorable="d"
+         
+d:DesignHeight="800" d:DesignWidth="1280">
+   
+
+
+
+    <Canvas Background="#FF333333" Margin="0,0,-34,-22">
         <Button Content="Overview" Canvas.Top="76" HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" Height="50" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White" Command="{Binding OverviewCommand}" Canvas.Left="10"/>
         <Button Content="AdvStats" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" Height="50" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White" Command="{Binding AdvStatsCommand}" Canvas.Left="10"/>
 
 
 
-        <Canvas x:Name="MatchesByTime" Width="643" Height="424" Canvas.Left="157" Canvas.Top="10">
-            <Label Content="Choose Date" Canvas.Left="68" Canvas.Top="2"></Label>
-            <Calendar SelectedDatesChanged="{Binding DatePicked}" SelectionMode="SingleRange" Canvas.Left="10" Canvas.Top="33" HorizontalAlignment="Center" VerticalAlignment="Top"></Calendar>
+        <Canvas x:Name="MatchesByTime" Width="1109" Height="802" Canvas.Left="157" Canvas.Top="10">
+            <Label Content="Choose Start Date" Canvas.Left="68" Canvas.Top="2"></Label>
+            <Viewbox Height="272" Width="323" Canvas.Left="1" Canvas.Top="33">
+                <Calendar x:Name="StartCal" SelectionMode="MultipleRange" Canvas.Left="10" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top" >
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectedDatesChanged">
+                            <i:InvokeCommandAction Command="{Binding SelectedStartDate}" CommandParameter="{Binding ElementName=StartCal}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </Calendar>
+            </Viewbox>
+            <TextBox Text="{Binding StartDate }" Height="32" Width="128" Canvas.Left="18" Canvas.Top="310" HorizontalAlignment="Center" VerticalAlignment="Top"  FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"></TextBox>
+            <TextBox Text="{Binding EndDate }" Height="32" Width="124" Canvas.Left="162" Canvas.Top="310" HorizontalAlignment="Left" VerticalAlignment="Top"  FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White"/>
 
-            <ListView Width="128" Height="160" Canvas.Left="18" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <ListView SelectedItem=""  ItemsSource="{Binding nameList}"  SelectionMode="Multiple" Width="252" Height="380" Canvas.Left="18" Canvas.Top="352" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Bahnschrift" BorderBrush="White" Background="{x:Null}" FontWeight="Bold" Foreground="White">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition />
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Border Grid.Column="0" Padding="5,5,5,5">
+                                <TextBlock Grid.Column ="0" Text="{Binding name}"/>
+                            </Border>
+                            <Border Grid.Column="1" Padding="5,5,5,5">
+                                <TextBlock Grid.Column="1" Text="{Binding Popularity}"/>
+                            </Border>
+                            <Border Grid.Column="2" Padding="5,5,5,5">
+                                <TextBlock Grid.Column="1" Text="{Binding Occerrence}"/>
+                            </Border>
 
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
-            <lvc:CartesianChart LegendLocation="Left" Width="393" Height="225" Canvas.Left="216" Canvas.Top="79" HorizontalAlignment="Center" VerticalAlignment="Center"></lvc:CartesianChart>
+            <lvc:CartesianChart Series="{Binding series }" LegendLocation="Left" Width="777" Height="545" Canvas.Left="326" Canvas.Top="79" HorizontalAlignment="Left" VerticalAlignment="Center">
+
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis Title="Stat" Labels="{Binding getLabels}"></lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+            </lvc:CartesianChart>
+
+
+
         </Canvas>
     </Canvas>
 
-</Window>
+</UserControl>
