--- a/Views/UsersView.xaml
+++ b/Views/UsersView.xaml
@@ -66,8 +66,13 @@
                Foreground="White" 
                Canvas.Top="-1"/>
 
-        <Separator Height="1" Canvas.Top="26" Width="1280" Foreground="#FF585858" Background="#FF383838" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        
+        <Separator Height="1" Canvas.Top="26" Width="1280" Foreground="#FF585858" Background="#FF383838" 
+                   HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
+        
+        
         <ListView x:Name="List_Users" 
                   Height="600" Width="276" ItemsSource="{Binding UsersList}" 
                   Canvas.Left="150" Canvas.Top="100" Background="#FF333333" 
@@ -95,6 +100,18 @@
             </ListView.View>
         </ListView>
 
+        <ListView x:Name="List_User_Matches" 
+                  Height="324" Width="336" ItemsSource="{Binding }" 
+                  Canvas.Left="500" Canvas.Top="372" Background="#FF333333" BorderThickness="1" 
+                  Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" 
+                  HorizontalAlignment="Left" VerticalAlignment="Top">
+            <ListView.View>
+            <GridView>
+                <GridViewColumn DisplayMemberBinding="{Binding }" Width="276"/>
+
+            </GridView>
+            </ListView.View>
+            </ListView>
 
 
 
@@ -112,7 +129,7 @@
         <Button x:Name="btn_Save" Content="Save Changes" Canvas.Left="574" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Width="102" Foreground="White" BorderBrush="White" Background="{x:Null}"/>
         
         <Label Content="User list of names" Canvas.Left="978" Canvas.Top="67" Width="140" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <ListBox x:Name="List_User_Matches" Height="324" Width="336" d:ItemsSource="{d:SampleData ItemCount=5}" Canvas.Left="500" Canvas.Top="372" Background="#FF333333" BorderThickness="1" Foreground="White" FontFamily="Bahnschrift" FontSize="16" BorderBrush="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        
         <Label Content="User list of matches" Canvas.Left="590" Canvas.Top="343" Width="160" Foreground="White" FontFamily="Bahnschrift" FontWeight="Bold" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
 
